--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,11 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["config:recommended"]
+	"extends": ["config:recommended"],
+	"hostRules": [
+		{
+			"hostType": "npm",
+			"matchHost": "https://npm.pkg.github.com/",
+			"token": "process.env.GITHUB_TOKEN"
+		}
+	]
 }
