feat: add shadn-ui

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "next dev --turbo",
-		"build": "next build --turbo",
+		"build": "next build",
 		"commit": "cz",
 		"format": "prettier --write .",
 		"lint": "next lint",
@@ -17,9 +17,14 @@
 	},
 	"dependencies": {
 		"@aabeborn/tirion": "1.1.1",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"lucide-react": "^0.321.0",
 		"next": "14.1.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"typescript": "^5.3.3",
